k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopdemo-service

spec:
  selector:
    app: shopdemo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
