k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopdemo-ingress

spec:
  rules:
    - host: shopdemo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopdemo-service
                port:
                  number: 80
